cabal-version:      2.4
name:               hstream-gossip
version:            0.1.0.0
synopsis:           SWIM based hstream server cluster probe and gossip library
license:            BSD-3-Clause
author:             Time Hoo
maintainer:         husj@emqx.io
extra-source-files: CHANGELOG.md

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library
  import:           shared-properties
  exposed-modules:
    HStream.Client.Types
    HStream.Gossip
    HStream.Gossip.Core
    HStream.Gossip.Gossip
    HStream.Gossip.Handlers
    HStream.Gossip.HStreamGossip
    HStream.Gossip.Probe
    HStream.Gossip.Start
    HStream.Gossip.Types
    HStream.Gossip.Utils

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  default-language: Haskell2010
  build-depends:
    , async
    , base
    , bytestring
    , cereal
    , containers
    , deepseq
    , grpc-haskell
    , hstream-common
    , optparse-applicative
    , proto3-suite
    , proto3-wire
    , random
    , random-shuffle
    , stm
    , table-layout
    , text
    , unordered-containers
    , vector
    , Z-Data
    , Z-IO

  hs-source-dirs:   app src gen-hs

executable hstream-gossip-server
  import:           shared-properties
  main-is:          Server.hs
  build-depends:
    , async
    , base
    , bytestring
    , cereal
    , containers
    , deepseq
    , grpc-haskell
    , hstream-common
    , hstream-gossip
    , optparse-applicative
    , proto3-suite
    , proto3-wire
    , random
    , random-shuffle
    , stm
    , text
    , vector

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  hs-source-dirs:   app

executable hstream-gossip-client
  import:           shared-properties
  main-is:          Client.hs
  build-depends:
    , base
    , bytestring
    , grpc-haskell
    , hstream-common
    , hstream-gossip
    , optparse-applicative
    , vector

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  hs-source-dirs:   app

test-suite hstream-gossip-test
  import:             shared-properties
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    HStream.Gossip.EventSpec
    HStream.Gossip.FailureSpec
    HStream.Gossip.JoinSpec
    HStream.Gossip.TestUtils

  hs-source-dirs:     test
  build-depends:
    , async
    , base
    , bytestring
    , containers
    , grpc-haskell
    , hspec
    , hstream-gossip
    , hstream-common
    , optparse-applicative
    , random
    , random-shuffle
    , stm
    , streaming-commons
    , vector

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover ==2.*
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
