cabal-version:      2.4
name:               hstream-gossip
version:            0.1.0.0
synopsis:           SWIM based hstream server cluster probe and gossip library
license:            BSD-3-Clause
author:             Time Hoo
maintainer:         husj@emqx.io
extra-source-files: CHANGELOG.md

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library
  import:           shared-properties
  exposed-modules:
    HStream.Client.Types
    HStream.Gossip
    HStream.Gossip.Core
    HStream.Gossip.Gossip
    HStream.Gossip.Handlers
    HStream.Gossip.HStreamGossip
    HStream.Gossip.Probe
    HStream.Gossip.Start
    HStream.Gossip.Types
    HStream.Gossip.Utils

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  default-language: Haskell2010
  build-depends:
    , async
    , base
    , bytestring
    , cereal
    , containers
    , deepseq
    , grpc-haskell
    , hstream-common
    , optparse-applicative
    , proto3-suite
    , proto3-wire
    , random
    , random-shuffle
    , slave-thread          ^>=1.1
    , stm
    , table-layout
    , text
    , unordered-containers
    , vector
    , Z-Data
    , Z-IO

  hs-source-dirs:   src gen-hs
