cabal-version:      2.2
name:               hesp
version:            0.1.0.0
synopsis:           High Performance Stream Data Processing for IoT in 5G Era.
description:        This package provides network protocol and commands parsing functions
                    used by HStreamDB.
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             mu
maintainer:         lambda@emqx.io
tested-with:        GHC == 8.10.2, GHC == 8.8.3
category:           Network
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstream/hstream/issues
build-type:         Simple
extra-source-files: README.md
                    ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

library
  exposed-modules:  Network.HESP
                    Network.HESP.Commands
                    Network.HESP.Utils
  other-modules:    Network.HESP.Protocol
                    Network.HESP.TCP
                    Network.HESP.Types
  hs-source-dirs:   src
  build-depends:    base            >= 4.11 && < 5
                  , bytestring      ^>= 0.10
                  , containers      ^>= 0.6
                  , deepseq         ^>= 1.4
                  , lifted-base     >= 0.2
                  , monad-control   ^>= 1.0
                  , network         >= 3.1.2 && < 3.2
                  , resource-pool   ^>= 0.2
                  , safe-exceptions >= 0.1
                  , scanner         ^>= 0.3
                  , text            ^>= 1.2
                  , time            >= 1.8 && < 2
                  , vector          ^>= 0.12
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite hesp-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Test.ProtocolSpec
                      Test.TCPSpec
  hs-source-dirs:     test
  build-depends:      base >= 4.11 && < 5, bytestring, hesp, hspec, text, vector
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
                      -threaded -rtsopts -with-rtsopts=-N

benchmark hesp-benchmark
  type:             exitcode-stdio-1.0
  main-is:          benchmark/Benchmark.hs
  build-depends:    base >= 4.11 && < 5, bytestring, criterion, hesp, time, vector
  default-language: Haskell2010
  ghc-options:      -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
