cabal-version:      2.2
name:               hstream-http-server
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on Github at
  <https://github.com/hstreamdb/hstream#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             Qinghao Huang
maintainer:         huangqinghao@emqx.io
category:           Streaming
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstreamdb/hstream/issues
build-type:         Simple
extra-source-files: README.md

library
  exposed-modules:
    HStream.HTTP.Server.API
    HStream.HTTP.Server.Connector
    HStream.HTTP.Server.Node
    HStream.HTTP.Server.Overview
    HStream.HTTP.Server.Query
    HStream.HTTP.Server.Stream
    HStream.HTTP.Server.View

  build-depends:
    , aeson
    , base                  >=4.11 && <5
    , bytestring
    , clickhouse-haskell
    , containers
    , hstream-common
    , hstream-connector
    , hstream-store
    , lens
    , lens-aeson
    , mysql-haskell
    , optparse-applicative
    , rio
    , scientific
    , servant
    , servant-server
    , servant-swagger
    , swagger2
    , text
    , unordered-containers
    , vector
    , warp
    , Z-Data
    , Z-IO
    , grpc-haskell
    , grpc-haskell-core

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable hstream-http-server
  main-is:          Main.hs
  build-depends:
    , base                  >=4.11 && <5
    , hstream
    , hstream-common
    , hstream-http-server
    , hstream-store
    , optparse-applicative
    , servant
    , servant-server
    , warp
    , grpc-haskell
    , grpc-haskell-core

  hs-source-dirs:   app
  extra-lib-dirs:   /usr/local/lib
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N

executable hstream-swagger-json
  main-is:          Swagger.hs
  build-depends:
    , aeson-pretty
    , base                 >=4.11 && <5
    , bytestring
    , filepath             ^>=1.4
    , hstream-http-server

  hs-source-dirs:   app
  extra-lib-dirs:   /usr/local/lib
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N
