cabal-version:      3.6
name:               hstream-kafka
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020-present EMQ Technologies Co., Ltd.
author:             Mu <lambda@emqx.io>
maintainer:         lambda@emqx.io
tested-with:        GHC ==9.2.8
category:           Database
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstreamdb/hstream/issues
build-type:         Simple
extra-source-files: include/*.h

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

flag ReleaseBuild
  default:     False
  description:
    Enables all optimisations, leads to slower build time and better performance

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages

  if flag(releasebuild)
    ghc-options:
      -feager-blackholing -flate-dmd-anal -flate-specialise
      -fspec-constr-keen -fstatic-argument-transformation
      -funbox-strict-fields -O2

library kafka-protocol
  import:             shared-properties
  exposed-modules:
    Kafka.Protocol
    Kafka.Protocol.Encoding
    Kafka.Protocol.Error
    Kafka.Protocol.Message
    Kafka.Protocol.Service

  other-modules:
    Kafka.Protocol.Encoding.Encode
    Kafka.Protocol.Encoding.Internal
    Kafka.Protocol.Encoding.Parser
    Kafka.Protocol.Message.Struct
    Kafka.Protocol.Message.Total

  hs-source-dirs:     protocol
  build-tool-depends: hpp:hpp >=0.6 && <0.7
  build-depends:
    , base                 >=4.11     && <5
    , bytestring
    , deepseq
    , digest               ^>=0.0.2.0
    , hstream-common-base
    , text
    , vector

  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    RecordWildCards

test-suite kafka-protocol-test
  import:             shared-properties
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Kafka.Protocol.EncodingSpec
    Kafka.QuickCheck.Instances

  hs-source-dirs:     protocol/test
  build-depends:
    , base                          >=4.11 && <5
    , bytestring
    , hspec
    , hstream-kafka:kafka-protocol
    , QuickCheck
    , quickcheck-instances
    , quickcheck-special            ^>=0.1
    , text

  default-extensions:
    LambdaCase
    OverloadedStrings
    RecordWildCards

  default-language:   GHC2021
  build-tool-depends: hspec-discover:hspec-discover >=2 && <3
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

benchmark kafka-protocol-bench-encoding
  import:           shared-properties
  type:             exitcode-stdio-1.0
  main-is:          Encoding.hs
  hs-source-dirs:   protocol/bench
  build-depends:
    , base
    , bytestring
    , criterion
    , hstream-kafka:kafka-protocol
    , vector

  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

library
  import:             shared-properties
  exposed-modules:
    HStream.Kafka.Client.Api
    HStream.Kafka.Client.Cli
    HStream.Kafka.Common.KafkaException
    HStream.Kafka.Common.Metrics
    HStream.Kafka.Common.OffsetManager
    HStream.Kafka.Common.Read
    HStream.Kafka.Common.RecordFormat
    HStream.Kafka.Common.Utils
    HStream.Kafka.Group.Group
    HStream.Kafka.Group.GroupCoordinator
    HStream.Kafka.Group.GroupOffsetManager
    HStream.Kafka.Group.Member
    HStream.Kafka.Group.OffsetsStore
    HStream.Kafka.Network
    HStream.Kafka.Server.Config
    HStream.Kafka.Server.Handler
    HStream.Kafka.Server.Handler.Security
    HStream.Kafka.Server.Types

  other-modules:
    HStream.Kafka.Common.AdminCli
    HStream.Kafka.Common.Metrics.ConsumeStats
    HStream.Kafka.Common.Metrics.ProduceStats
    HStream.Kafka.Common.Metrics.ServerStats
    HStream.Kafka.Network.Cxx
    HStream.Kafka.Network.IO
    HStream.Kafka.Network.Security
    HStream.Kafka.Server.Config.FromCli
    HStream.Kafka.Server.Config.FromJson
    HStream.Kafka.Server.Config.KafkaConfig
    HStream.Kafka.Server.Config.KafkaConfigManager
    HStream.Kafka.Server.Config.Types
    HStream.Kafka.Server.Core.Topic
    HStream.Kafka.Server.Core.Store
    HStream.Kafka.Server.Handler.AdminCommand
    HStream.Kafka.Server.Handler.Basic
    HStream.Kafka.Server.Handler.Consume
    HStream.Kafka.Server.Handler.Group
    HStream.Kafka.Server.Handler.Offset
    HStream.Kafka.Server.Handler.Produce
    HStream.Kafka.Server.Handler.Topic
    HStream.Kafka.Server.Security.SASL

  cxx-sources:
    cbits/hs_kafka_client.cpp
    cbits/hs_kafka_server.cpp

  cxx-options:        -std=c++17
  hsc2hs-options:
    "--cc=g++" "--lflag=-lstdc++" "--cflag=-D__HSC2HS__=1"
    "--cflag=-std=c++17"

  extra-libraries:
    rdkafka++
    folly
    fizz
    wangle

  include-dirs:       include /usr/local/include
  extra-lib-dirs:     /usr/local/lib
  hs-source-dirs:     .
  build-tool-depends: hsc2hs:hsc2hs
  build-depends:
    , aeson
    , async                         ^>=2.2
    , attoparsec
    , base                          >=4.11     && <5
    , base64                        ^>=1.0
    , bytestring
    , clock
    , colourista                    ^>=0.1.0.1
    , containers
    , directory
    , foreign
    , ghc
    , gsasl-hs
    , hashable
    , hashtables
    , haskeline
    , hstream-admin-server
    , hstream-api-hs
    , hstream-common
    , hstream-common-base
    , hstream-common-server
    , hstream-common-stats
    , hstream-gossip
    , hstream-kafka:kafka-protocol
    , hstream-store
    , mtl
    , network
    , optparse-applicative
    , prometheus-client
    , stm
    , text
    , unix
    , unordered-containers
    , utf8-string
    , uuid
    , vector
    , vector-hashtables
    , wai-middleware-prometheus
    , warp
    , yaml
    , Z-Data
    , zoovisitor

  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    UnliftedFFITypes
    UnliftedNewtypes
