cabal-version:      2.2
name:               hstream-processing
version:            0.1.0.0
synopsis:           High performance stream processing platform for IoT data written in Haskell.
description:        Please see the README on Github at
                    <https://github.com/hstream-io/hstream#readme>
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             Feng Lee <feng@emqx.io>
maintainer:         lambda@emqx.io, maosics@gmail.com
tested-with:        GHC == 8.10.2, GHC == 8.8.4
category:           Database
homepage:           https://github.com/hstream-io/hstream
bug-reports:        https://github.com/hstream-io/hstream/issues
build-type:         Simple
extra-source-files: ChangeLog.md
                    README.md

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

library
  exposed-modules:  HStream.Processing
  hs-source-dirs:   src
  build-depends:    base              >= 4.11 && < 5
                  , bytestring        ^>= 0.10
                  , co-log
                  , containers        ^>= 0.6
                  , hashable          ^>= 1.3
                  , hesp
                  , monad-control     ^>= 1.0
                  , mtl               ^>= 2.2
                  , network           >= 3.1.2
                  , stm               ^>= 2.5
                  , streaming         ^>= 0.2
                  , text              ^>= 1.2
                  , time              >= 1.9.1 && < 2
                  , transformers-base ^>= 0.4
                  , vector            ^>= 0.12
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
